tests/fixtures/invalid/bool_lt_none.py
# Cannot compare with < Bool and None
x: bool = True < None
